@@ -1,6 +1,6 @@
 dnl AM_GCONF_SOURCE_2
 dnl Defines GCONF_SCHEMA_CONFIG_SOURCE which is where you should install schemas
-dnl  (i.e. pass to gconftool)
+dnl  (i.e. pass to gconftool-2
 dnl Defines GCONF_SCHEMA_FILE_DIR which is a filesystem directory where
 dnl  you should install foo.schemas files
 dnl
@@ -8,7 +8,7 @@ dnl
 AC_DEFUN(AM_GCONF_SOURCE_2,
 [
   if test "x$GCONF_SCHEMA_INSTALL_SOURCE" = "x"; then
-    GCONF_SCHEMA_CONFIG_SOURCE=`gconftool --get-default-source`
+    GCONF_SCHEMA_CONFIG_SOURCE=`gconftool-2 --get-default-source`
   else
     GCONF_SCHEMA_CONFIG_SOURCE=$GCONF_SCHEMA_INSTALL_SOURCE
   fi
@@ -17,17 +17,17 @@ AC_DEFUN(AM_GCONF_SOURCE_2,
   [  --with-gconf-source=sourceaddress      Config database for installing schema files.],GCONF_SCHEMA_CONFIG_SOURCE="$withval",)
 
   AC_SUBST(GCONF_SCHEMA_CONFIG_SOURCE)
-  AC_MSG_RESULT("Using config source $GCONF_SCHEMA_CONFIG_SOURCE for schema installation")
+  AC_MSG_RESULT([Using config source $GCONF_SCHEMA_CONFIG_SOURCE for schema installation])
 
   if test "x$GCONF_SCHEMA_FILE_DIR" = "x"; then
-    GCONF_SCHEMA_FILE_DIR='$(sysconfdir)/gconf/schemas/'
+    GCONF_SCHEMA_FILE_DIR='$(DESTDIR)$(sysconfdir)/gconf/schemas/'
   else
-    GCONF_SCHEMA_FILE_DIR=$GCONF_SCHEMA_FILE_DIR
+    GCONF_SCHEMA_FILE_DIR='$(DESTDIR)'$GCONF_SCHEMA_FILE_DIR
   fi
 
   AC_ARG_WITH(gconf-schema-file-dir, 
   [  --with-gconf-schema-file-dir=dir        Directory for installing schema files.],GCONF_SCHEMA_FILE_DIR="$withval",)
 
   AC_SUBST(GCONF_SCHEMA_FILE_DIR)
-  AC_MSG_RESULT("Using $GCONF_SCHEMA_FILE_DIR as install directory for schema files")
+  AC_MSG_RESULT([Using $GCONF_SCHEMA_FILE_DIR as install directory for schema files])
 ])
