@@ -1,3 +1,11 @@
+2002-02-07  jacob berkman  <jacob@ximian.com>
+
+	* gconf/Makefile.am (install-exec-local): don't install gconftool
+	symlink
+
+	* gconf.m4.in (AM_GCONF_SOURCE_2): call gconftool-2 rather than
+	gconftool
+
 2002-02-05  Havoc Pennington  <hp@redhat.com>
 
 	* gconf/gconf-sanity-check.c (main): add gconf-sanity-check-2 app,
